--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
      <section>
 
         <h2>HTML</h2>
-        <p><span class="texto-inglês">HyperText Markup Language</span></p>
+        <p><span class="texto-inglês">HyperText Markup Language</span></ (em português, linguage de marcação de hipertexto) estrutura sua página web </p>
+
+        <h2>css</h2>
+        <p><span class="texto-inglês">Cascading Style Sheets</span>(em portugês, folhas de Estilo rm cascata), cria </p>
+
+        <h2>Outras linguagens</h2>
+        <li id="lista">liata</li>
+        <h2>Alunos</h2>
 </body>
 </html>
