--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 </head>
 <body>
     <header>
-        <h1>hello world1</h1>
+        <h1>Bem-vindo à nossa página de voleibol, VoleiWorld!
+Se você é apaixonado por esse esporte emocionante, veio ao lugar certo. Aqui, você encontra tudo o que precisa saber sobre o voleibol,
+desde suas regras básicas até as últimas notícias e eventos do mundo da modalidade.
+ Quem somos
+Somos uma equipe dedicada de entusiastas do voleibol, comprometidos em promover o esporte e disseminar informações precisas e atualizadas.
+    Nosso objetivo é criar uma comunidade onde jogadores, treinadores e fãs possam compartilhar experiências e aprender mais sobre o jogo.
+ O que oferecemos
+    História do Voleibol: Conheça as origens e a evolução do esporte, desde suas invenções até os dias atuais.
+Regras e Técnicas: Entenda as principais regras do jogo, técnicas de saque, passe, ataque e defesa, além de dicas de treinamento.
+Calendário de Competições: Fique por dentro das competições nacionais e internacionais, com datas, resultados e destaques.
+Notícias e Atualizações: Acompanhe as últimas novidades, transferências e acontecimentos no mundo do voleibol.
+Conteúdo Multimídia: Galeria de fotos, vídeos de jogadas incríveis e entrevistas com atletas renomados
+Comunidade: Fórum para discutir estratégias, compartilhar experiências e tirar dúvidas com outros fãs e praticantes.
+Por que visitar nossa página?
+Seja você um iniciante querendo aprender as regras ou um atleta experiente buscando notícias atualizadas,
+ nossa página é o seu ponto de referência no universo do voleibol.
+ Aqui, promovemos o esporte e incentivamos a prática saudável e divertida do voleibol em todas as idades.
+   Junte-se a nós!Acompanhe nossas atualizações, participe das discussões e celebre o espírito do voleibol. Vamos elevar esse esporte juntos!
+
+</h1>
         <P>que bom te ver por aqui, <span id="nome-usuário">fulano</span></P>
      <header>
      <section>
