--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo à nossa página de voleibol, VoleiWorld!
-Se você é apaixonado por esse esporte emocionante, veio ao lugar certo. Aqui, você encontra tudo o que precisa saber sobre o voleibol,
+        <h1><center>Bem-vindo à nossa página de voleibol, VoleiWorld!</center></h1>
+      
+<p>Se você é apaixonado por esse esporte emocionante, veio ao lugar certo. Aqui, você encontra tudo o que precisa saber sobre o voleibol,
 desde suas regras básicas até as últimas notícias e eventos do mundo da modalidade.
  Quem somos
 Somos uma equipe dedicada de entusiastas do voleibol, comprometidos em promover o esporte e disseminar informações precisas e atualizadas.
@@ -25,8 +26,7 @@ Seja você um iniciante querendo aprender as regras ou um atleta experiente busc
  nossa página é o seu ponto de referência no universo do voleibol.
  Aqui, promovemos o esporte e incentivamos a prática saudável e divertida do voleibol em todas as idades.
    Junte-se a nós!Acompanhe nossas atualizações, participe das discussões e celebre o espírito do voleibol. Vamos elevar esse esporte juntos!
-
-</h1>
+</p>
         
 
 
